<resources>
    <string name="app_name" translatable="false">FN Helper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cosmetic_item_image">Cosmetic Item Image</string>
    <string name="battle_star">Battle Star</string>
    <string name="cosmetic_items">Cosmetic Items</string>
    <string name="item_shop">Item Shop</string>
    <string name="upcoming_items">Upcoming Items</string>
    <string name="news">News</string>
    <string name="challenges">Challenges</string>
    <string name="title_activity_cosmetic">CosmeticActivity</string>
    <string name="description">Description :</string>
    <string name="rating">Rating :</string>
    <string name="occurrences">Occurrences :</string>
    <string name="last_apperance">Last Appearance</string>
    <string name="release_date">First Appearance</string>
    <string name="available_on_today_s_item_shop">available on Today\'s Item Shop</string>
    <string name="cost">Cost :</string>
    <string name="type">Type :</string>
    <string name="battle_pass_text">Battle Pass :</string>
    <string name="images">Images :</string>
    <string name="add_to_favourite">Add To favourite</string>
    <string name="favorites">Favorites</string>
    <string name="add_widget">Add widget</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="credits">Developed By :</string>
    <string name="developer_name">Basem Osama</string>
    <string name="share">Share</string>
    <string name="removed_from_favorites">&#160; has been removed from Favorites.</string>
    <string name="added_to_favorites">&#160; has been added to Favorites.</string>
    <string name="week">Week &#160;</string>
    <string name="retrofit_error_message">Sorry there was an error , Try again Later</string>
    <string name="no_internet_message">Sorry , There is no Intenet available , Please try again later</string>
    <string name="item_shop_scroll_message">Scroll To the End of the Item Shop to show all items</string>
    <string name="news_image">News Image</string>
    <string name="date">Date :</string>
    <string name="upcoming" translatable="false">Upcoming</string>
    <string name="not_available_yet">Not available yet</string>
    <string name="not_available">Not Available</string>
    <string name="epic_games_credits">Not affiliated with Epic Games</string>
    <string name="widget_empty_text">Sorry , There was an error while Loading the widget</string>
    <string name="share_message">Hey, download this app! \n https://play.google.com/store/apps/details?id=com.basemosama.fnhelper</string>

    <string name="expand_challenges">Expand Challenges</string>
    <string name="challenge_not_available">This Week Challenges are\'t available yet .</string>
    <string name="collapse_challenges">Collapse Challenges</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="today_item_shop">Today\'s Item Shop</string>
    <string name="share_via">Share via</string>
    <string name="upcoming_items_share_body">All Upcoming Fortnite Cosmetic Items</string>
    <string name="fab_content_description">Take Screenshot and Share it</string>


</resources>
