<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/cosmetic_item"
            android:title="@string/cosmetic_items" />
          <item
        android:id="@+id/nav_item_shop"
        android:icon="@drawable/item_shop"
        android:title="@string/item_shop" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/upcoming"
            android:title="@string/upcoming_items" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/favorite_black"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/news"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_challenges"
            android:icon="@drawable/challenge"
            android:title="@string/challenges" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />
    </group>

<group
    android:checkableBehavior="none"
    >
    <item android:title="@string/epic_games_credits"
        android:icon="@drawable/ic_about">
    </item>
</group>
</menu>
